manifest_files/service.yaml
# https://kubernetes.io/docs/concepts/services-networking/service/
apiVersion: v1
kind: Service
metadata:
  name: static-app-js
  namespace: default
spec:
  selector:
    app: static-app-js
  ports:
  - name: static-app-js
    protocol: TCP
    port: 80
    targetPort: 80
---
